--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,13 @@
 
   <title>project_led</title>
   <link rel="manifest" href="manifest.json">
+  
+  
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -37,8 +44,9 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #42a5f5;
-          background-size: 100% 100%;
+      background-color: #ffffff;
+      background-image: url("splash/img/light-background.png");
+      background-size: 100% 100%;
     }
 
     .center {
@@ -94,9 +102,9 @@
       document.body.style.background = "transparent";
     }
   </script>
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 </head>
 <body>
+  
   <script src="flutter_bootstrap.js" async=""></script>
 
 
