Update splash screen colors and configurations
- Changed splash screen background colors in `flutter_native_splash.yaml` for light and dark themes.
- Updated styles in `styles.xml` to reflect new splash screen background colors for both light and dark modes.
- Modified web `index.html` to adjust the splash screen background color based on the theme.
- Added dark appearance support for the iOS launch background in `Contents.json`.
- Implemented a delay for removing the Flutter native splash screen in `main.dart` for a smoother transition.

--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,22 @@
   
   
   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -44,7 +60,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #ffffff;
+      background-color: #F5F5F5;
       background-image: url("splash/img/light-background.png");
       background-size: 100% 100%;
     }
@@ -93,6 +109,12 @@
       position: absolute;
       bottom: 0;
       right: 0;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #121212;
+          }
     }
   </style>
   <script id="splash-screen-script">
