--- a/web/index.html
+++ b/web/index.html
@@ -52,6 +52,18 @@
   
   
   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -60,9 +72,8 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #F5F5F5;
-      background-image: url("splash/img/light-background.png");
-      background-size: 100% 100%;
+      background-color: #ffffff;
+          background-size: 100% 100%;
     }
 
     .center {
@@ -110,12 +121,6 @@
       bottom: 0;
       right: 0;
     }
-
-    @media (prefers-color-scheme: dark) {
-      body {
-        background-color: #121212;
-          }
-    }
   </style>
   <script id="splash-screen-script">
     function removeSplashFromWeb() {
@@ -126,6 +131,7 @@
   </script>
 </head>
 <body>
+  
   
   <script src="flutter_bootstrap.js" async=""></script>
 
